--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="EMG sens"
+        android:label="Ultrasoniczny system bezpieczeństwa"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
 
